# djchat

./: .dockerignore  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  init.sh  pyproject.toml  requirements.txt
djchat/chat/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
djchat/chat/migrations/: 0001_initial.py
djchat/chat/templates/chat/: base.html  index.html  login.html  new_user.html
djchat/djchat/: asgi.py  routing.py  settings.py  urls.py
nginx/: Dockerfile  service-djchat.conf
